[project]
name = "staffsergeant"
version = "0.1.0"
dependencies = [
    "Jinja2",
    "linkify-it-py",
    "markdown-it-py",
    "MarkupSafe",
    "mdit-py-plugins",
    "mdurl",
    "PyYAML",
    "uc-micro-py",
    "typer",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
ssg = "ssg:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["build"]


[tool.ruff.lint]
select = ["E", "F"]