[project]
name = "staffsergeant"
dynamic = ["version"]

dependencies = [
    "Jinja2",
    "linkify-it-py",
    "markdown-it-py",
    "MarkupSafe",
    "mdit-py-plugins",
    "mdurl",
    "PyYAML",
    "uc-micro-py",
    "typer",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
ssg = "ssg:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["build"]


[tool.ruff.lint]
select = ["E", "F"]